--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
 
     // Retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    api 'com.squareup.retrofit2:retrofit:2.1.0'
 
     // JSON Parsing
-    compile 'com.google.code.gson:gson:2.6.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.google.code.gson:gson:2.6.1'
+    api 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
