--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
 
-    // Retrofit
     api 'com.squareup.retrofit2:retrofit:2.1.0'
 
-    // JSON Parsing
     implementation 'com.google.code.gson:gson:2.6.1'
     api 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
