--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 dependencies {
@@ -37,4 +40,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     api 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    implementation 'androidx.room:room-runtime:2.1.0-alpha02'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha02'
 }
